--- a/UI/code/Login_RauMa/DashBoar/FrmThongTinNhanVien.resx
+++ b/UI/code/Login_RauMa/DashBoar/FrmThongTinNhanVien.resx
@@ -256,4 +256,14 @@
         XBCD5QGp/wAz8XKN5YCcEwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAADqSURBVDhP1ZI9CsJAFIRT+IOltxAtRPtAQAtzgED+6txAtLLwJlaClVioteIlErESS2stRL+V
+        V7iw/jQiDgzLvJ15bzcb66twHCcXhmEviqIMHmEKB57nlcTyHCocx/GawNz3/QaNymqlNqa2UftiNQNT
+        H05FaqDJDHZFmkF4FwRBRaQG9qo02Io0A9OZuxZEanBdt8iVTiLNUBM4QU2kBvbqDMhEmsGEIcaJSA2E
+        F2+/AYYOxiu8v0KSJHlqTfQSrl6+AkYb04HVefgPLjBVk1+GCbQx7tU0KX0Ogq3fhBU4+oiwLfJvYFk3
+        3Y9jF5EnizMAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
