--- a/UI/code/Login_RauMa/DashBoar/frmThongTinNhanVien.resx
+++ b/UI/code/Login_RauMa/DashBoar/frmThongTinNhanVien.resx
@@ -120,80 +120,78 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnThoat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAWSSURBVGhD7ZhtbFNVGMd7S9utGyvr6EbXtd3aLqhTYJsOlLHxsjdiNCFoYtAgaPyiCyYaiRr9
-        AImKRjTRDya+YCQhanwD5ItREHkZgzGZ22DAGAH20m0dDMY22m2w+f/f9sJd7XBrvF2J+ye/tPee52mf
-        e+45z3POUU1pSne+tIHPSVMJ+AFoxKuJaRHY7/8aeTnAdnBNLaja8fkcb05QX4ERwE6ImATwIvBmxmkP
-        1xTa3etdxt9xfQHEgPFqFvAm69TH8NkIYnlTafFPvkePX/xy3qyay8tdI6Sj1Nk/TVA1o+0l0Wp82hCv
-        ERrbSx19WkE4h+uN/tvKiT2/J1YtnK0ttLdLwUtsnJ20D+3dIInG/yJ2ROdrmcZK+m7LMR/BtRfcxUYl
-        9eOTaQkHgoMn3ctdNxI06lrYfOQ3va3W8i22lzoHJP+5CTEchgdBOMlg3EoGHWWm+N3y4CV25KXWo30A
-        zKbxbfTnytTpFXLf5uKMPp0gcB695TdRTgvBtXXOxFEBSLjitAfQzuw0lpg6fSeXpncH++7Is9SwDSyj
-        oZJ6DHh3zbecCg6iusB+nm2gkIYhtDPboDsU7CfxhMXwG2zcIEW0VlAbkHnaG5amdwUHscyk3432KsCJ
-        Lxd7f7BikbU52EeipcTZA6ce2L0geigoBvcNUuFpd7HzmjyI5mLHFUzSDrSvES39on1VQZL+oNxWDhOB
-        Ta+phN0fICJLjATQEGpIPJ8+Yw/aOJykArUCT9CHsX8p2FZidZo4fFjV00SPCCkTXC7PGD2pL5a5hlAz
-        TqPtTcDebFw1RgomH9+XzMnfB3JBxPUI8G3PGz2pP5ubwuHQCzZqBMHtluV9OfsXWhvxdq7CbjWYNL2v
-        UwsXzhc5euXBzdROq0bbyCsuY8jM01rs7MWbOgWbz8VfmUSxgu5zxGmrMBlvBnhkka0pUauu85Q5r8sD
-        J7AbdvrrBt/URBaCiomTz/Os3TAq01wqc92QX0ustc5gumXOt9A5WrQEDGzNNteHClri69zUo7DrBwvo
-        FG16B3XAE6rIkaZlji4UwRbYMUNFpR4Ew9/ebz4eHDyG03VzrOYw2n8FahpHmxLB2eLkuJA5f9M9Ju6B
-        u4Dia51wxOXCT0k69fGuMmfIiVu32O4O5Pwi0SPK9DqC665bYu8IFbxEIPt0AqvoFSV6FPi25syqDRX0
-        prtnVqAS+wLXzP/cfVUAHZ0nW3PA1fVjVNt3s0wsVsNWvaYak3iY9wIVmGulT/gDkymeD7WVjDFpWYkD
-        Y/4N4FljM9y0qyqws+0y7j8DJkU82zkzx6Crli8fJDpKnT3o5ROw2Spaq1QPA98vC6w30+un88w8F2JB
-        e4AGkZQR1JhjNMc6S51D8sAlcmbE7IUNHyCeDgF9wKMZ2XwYWWGezknNsyGm4IiIa556o1Z9vLXE0S8P
-        WiJwTsT1fRYdZOKiraHIdGvIce+ABR/fxE4wjUZKaiXwZOi1VW0lTq88aIlD+bYzGNvcBzwtevxTrNS+
-        vQ/Zzkk+9YvTW7C8aMX98Zwrha3NYKjckXiQS2F50BIYTl69WjgJuy9Ej7G1JRXDT+5bmW9rwkO0oW2d
-        3+S/11Ng8MN7TUflfyxneUo8x3MTkI/7ULIB73e55hNy/+pC+1nc56TOp5ESKgeDj6cm7A/OPLvmW3i0
-        yJO5sc6EgrV5pk5dJ/+Nn+dbuIPj4ZZBtFBIS4EnJzG2QnqIwCaeW8OJjGEu6Pq2ZN+q3g69uEOT0q6i
-        4mlEF96EmE1ezTQyZfIsaDobJ6D3EjTqk+yInXmWv3A9CBQ/pZZUALxcImNDz2VBOJPPBK5uzkqujNMI
-        dfge8aXFKsBxz/PQcAvR24G0ewXwBDziYs8zxYYrTljWgJfFqztUeoAXMaUpTel/JJXqb47tbxzs43nt
-        AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABZJJREFUaEPt
+        mG1sU1UYx3tL260bK+voRte13douqFNgmw6UsfGyN2I0IWhi0CBo/KILJhqJGv0AiYpGNNEPJr5gJCFq
+        fAPki1EQeRmDMZnbYMAYAfbSbR0MxjbabbD5/9/2wl3tcGu8XYn7J7+0957naZ977jnPc85RTWlKd760
+        gc9JUwn4AWjEq4lpEdjv/xp5OcB2cE0tqNrx+RxvTlBfgRHAToiYBPAi8GbGaQ/XFNrd613G33F9AcSA
+        8WoW8Cbr1Mfw2QhieVNp8U++R49f/HLerJrLy10jpKPU2T9NUDWj7SXRanzaEK8RGttLHX1aQTiH643+
+        28qJPb8nVi2crS20t0vBS2ycnbQP7d0gicb/InZE52uZxkr6bssxH8G1F9zFRiX145NpCQeCgyfdy103
+        EjTqWth85De9rdbyLbaXOgck/7kJMRyGB0E4yWDcSgYdZab43fLgJXbkpdajfQDMpvFt9OfK1OkVct/m
+        4ow+nSBwHr3lN1FOC8G1dc7EUQFIuOK0B9DO7DSWmDp9J5emdwf77siz1LANLKOhknoMeHfNt5wKDqK6
+        wH6ebaCQhiG0M9ugOxTsJ/GExfAbbNwgRbRWUBuQedoblqZ3BQexzKTfjfYqwIkvF3t/sGKRtTnYR6Kl
+        xNkDpx7YvSB6KCgG9w1S4Wl3sfOaPIjmYscVTNIOtK8RLf2ifVVBkv6g3FYOE4FNr6mE3R8gIkuMBNAQ
+        akg8nz5jD9o4nKQCtQJP0IexfynYVmJ1mjh8WNXTRI8IKRNcLs8YPakvlrmGUDNOo+1NwN5sXDVGCiYf
+        35fMyd8HckHE9Qjwbc8bPak/m5vC4dALNmoEwe2W5X05+xdaG/F2rsJuNZg0va9TCxfOFzl65cHN1E6r
+        RtvIKy5jyMzTWuzsxZs6BZvPxV+ZRLGC7nPEaaswGW8GeGSRrSlRq67zlDmvywMnsBt2+usG39REFoKK
+        iZPP86zdMCrTXCpz3ZBfS6y1zmC6Zc630DlatAQMbM0214cKWuLr3NSjsOsHC+gUbXoHdcATqsiRpmWO
+        LhTBFtgxQ0WlHgTD395vPh4cPIbTdXOs5jDafwVqGkebEsHZ4uS4kDl/0z0m7oG7gOJrnXDE5cJPSTr1
+        8a4yZ8iJW7fY7g7k/CLRI8r0OoLrrlti7wgVvEQg+3QCq+gVJXoU+LbmzKoNFfSmu2dWoBL7AtfM/9x9
+        VQAdnSdbc8DV9WNU23ezTCxWw1a9phqTeJj3AhWYa6VP+AOTKZ4PtZWMMWlZiQNj/g3gWWMz3LSrKrCz
+        7TLuPwMmRTzbOTPHoKuWLx8kOkqdPejlE7DZKlqrVA8D3y8LrDfT66fzzDwXYkF7gAaRlBHUmGM0xzpL
+        nUPywCVyZsTshQ0fIJ4OAX3AoxnZfBhZYZ7OSc2zIabgiIhrnnqjVn28tcTRLw9aInBOxPV9Fh1k4qKt
+        och0a8hx74AFH9/ETjCNRkpqJfBk6LVVbSVOrzxoiUP5tjMY29wHPC16/FOs1L69D9nOST71i9NbsLxo
+        xf3xnCuFrc1gqNyReJBLYXnQEhhOXr1aOAm7L0SPsbUlFcNP7luZb2vCQ7ShbZ3f5L/XU2Dww3tNR+V/
+        LGd5SjzHcxOQj/tQsgHvd7nmE3L/6kL7WdznpM6nkRIqB4OPpybsD848u+ZbeLTIk7mxzoSCtXmmTl0n
+        /42f51u4g+PhlkG0UEhLgScnMbZCeojAJp5bw4mMYS7o+rZk36reDr24Q5PSrqLiaUQX3oSYTV7NNDJl
+        8ixoOhsnoPcSNOqT7IideZa/cD0IFD+lllQAvFwiY0PPZUE4k88Erm7OSq6M0wh1+B7xpcUqwHHP89Bw
+        C9HbgbR7BfAEPOJizzPFhitOWNaAl8WrO1R6gBcxpSlN6X8klepvju1vHOzjee0AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAALiMAAC4jAXilP3YAAAM/SURBVGhD7djJTxNxFAfwXjTRg/Gkd89qPHqRk6aePBgU
-        FLm4sBUhuLG4IwQXiBRwoUDbQGmLsmhETUwoGMOiHGwpIm1BuBhNiH/D871fOzCWpz4MDTKZwydDv/Pr
-        fN/LHEhqAQDDYkOjYEOjYEOjYEOjYEOjYEOJE7ahZbJsg5ptqBMz+Jts21s/2o4sBLNluH4JNpTghiDZ
-        cemIhv+BQn+wgOhcNmKfR7h+CTaU4IbQOYxo6FpdxrmO/tvltqC9DG3oZ7qM40d0rkaX6W1FbL8EG0pQ
-        KdqPaLhUOYTYfgk2lKBStDsxRKrQ22P7JdhQAkut6HxiiFSpQFauX4INJZKGSKnkbik2lOCGSJXkbik2
-        lKD/Y8fzByH99AAcORNHfx/NCag8IzeweI+uGVqO119yPEc5fU/LtXuUZxeuwXKZeQFPVsHQm9Kqcbhw
-        871ysfIDFF8dg1Ml78BWPgKXbn1QOV2LLo/CSczP4lWfF1aMqPPFV0bV97VnlVWP01sbyMwNeLh+CTaU
-        wFJLtT24o/fVPHQ9/6L09M+BwzMN526MQV1zGPoS9+hMk3MKSq6NQWPblPpMOd2/7wir883tn6Hn5dKz
-        +l7Pw+3G0K5jeYNsvwQbSlTWfbR0v5hLc/qi4PLHdTyNQUPbJ3x7o1DTGILOnhmVe/Ba9zgMRfh2ah+F
-        1WfK6f6dppA6b2+ZhI7ueE7oud39c9aq+iDbL8GGEr6+WQsOkKYNQ1ZzOYLPt3qxh+uXYEMJLCcpXQ5Z
-        EdsvwYYSVIrM5czlzOVWhg0lqBSZy5nLmcutDBtKUCkylzOXM5dbGTaUoFJkLmcutx6Ws7dOQkH5MFTb
-        g+DtTSyB13sPJyC/bBjuPphQnymn+zUNQXW+3hHmljuI2H4JNpRwYynahxaHcXdFodUbgSbXFDg6ptVn
-        LW/xTKvfUeiqz+k3Fzrf2hlZzHUOILZfgg0lXP4I2Ym+6weiAdvxDbq7YvohdflSFs9jv8mjC2gPYvsl
-        2FDC5cXlvJENLl+kVD/UanH6YqVO38xGxPZLsKFEYjmL2xfd3P5kNgcH+po84D/6hovl41KbaLE1WW49
-        YEOjYEOjYEOjYEOjYENjAMtP3PgoRvGYxmAAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IwAALiMBeKU/dgAAAz9JREFUaEPt2MlPE3EUB/BeNNGD8aR3z2o8epGTpp48GBQUubiwFSG4sbgjBBeI
+        FHChQNtAaYuyaERNTCgYw6IcbCkibUG4GE2If8PzvV87MJanPgwNMpnDJ0O/8+t838scSGoBAMNiQ6Ng
+        Q6NgQ6NgQ6NgQ6NgQ4kTtqFlsmyDmm2oEzP4m2zbWz/ajiwEs2W4fgk2lOCGINlx6YiG/4FCf7CA6Fw2
+        Yp9HuH4JNpTghtA5jGjoWl3GuY7+2+W2oL0MbehnuozjR3SuRpfpbUVsvwQbSlAp2o9ouFQ5hNh+CTaU
+        oFK0OzFEqtDbY/sl2FACS63ofGKIVKlAVq5fgg0lkoZIqeRuKTaU4IZIleRuKTaUoP9jx/MHIf30ABw5
+        E0d/H80JqDwjN7B4j64ZWo7XX3I8Rzl9T8u1e5RnF67Bcpl5AU9WwdCb0qpxuHDzvXKx8gMUXx2DUyXv
+        wFY+ApdufVA5XYsuj8JJzM/iVZ8XVoyo88VXRtX3tWeVVY/TWxvIzA14uH4JNpTAUku1Pbij99U8dD3/
+        ovT0z4HDMw3nboxBXXMY+hL36EyTcwpKro1BY9uU+kw53b/vCKvzze2foefl0rP6Xs/D7cbQrmN5g2y/
+        BBtKVNZ9tHS/mEtz+qLg8sd1PI1BQ9snfHujUNMYgs6eGZV78Fr3OAxF+HZqH4XVZ8rp/p2mkDpvb5mE
+        ju54Tui53f1z1qr6INsvwYYSvr5ZCw6Qpg1DVnM5gs+3erGH65dgQwksJyldDlkR2y/BhhJUiszlzOXM
+        5VaGDSWoFJnLmcuZy60MG0pQKTKXM5czl1sZNpSgUmQuZy63Hpazt05CQfkwVNuD4O1NLIHXew8nIL9s
+        GO4+mFCfKaf7NQ1Bdb7eEeaWO4jYfgk2lHBjKdqHFodxd0Wh1RuBJtcUODqm1Wctb/FMq99R6KrP6TcX
+        Ot/aGVnMdQ4gtl+CDSVc/gjZib7rB6IB2/ENurti+iF1+VIWz2O/yaMLaA9i+yXYUMLlxeW8kQ0uX6RU
+        P9RqcfpipU7fzEbE9kuwoURiOYvbF93c/mQ2Bwf6mjzgP/qGi+XjUptosTVZbj1gQ6NgQ6NgQ6NgQ6Ng
+        Q2MAy0/c+ChG8ZjGYAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAALiMAAC4jAXilP3YAAAT/SURBVGhD3ZpfaFtlGMZP54UiMnsxL9yuREoRLYiwjXWD
-        brIszUnOOclJm9a6irbTMnBMZW6gCJVNZTA39ULQbYpbs662SZOu1U5vvJB2bBZBnHNTbwU3vVJhonJ8
-        vtAvvjt5lkSaPzUHfqQ8J+d5nzfnnO87f2p4ntewULFRoGKjQMVGgYqS0EehPJ0fdxrWjGlYI48a644P
-        GNGsbURA+EzECKdjRiBrGQPHBlftPvJMW2DGHApPRt+zJqPnwS+Ryeh18HvuMx37GZxX67ediTy1+8iz
-        DzyB7YKzQSMMP2cyatgK/L3+6A5jMz7Ns9tuyKJgeSVUlEizEs2tBn3hjDOP0B6aKBtso5iLTFm9aO7u
-        5dRcc3jK6saeuMSC/1fQ5EU014XmmuvW3Npjg6q5+3DIJVnIpQLfE2iudd27T9awuemw4ST7jPYPHgs6
-        WfsHFqxSoLnvNr7/eGALDvtQLZoLo7n4eFePlbV/Y4EqDX7AX0MzZkLVzuXAp/pbwfJKqCgxcRjmQWNo
-        zsSA8QcLUi2slHsddTsX6+dheSVUlDgZJw8KtVrp2GV/8Rpx0U7HWmIp13AXYXklVJSoEWuROyIZZ4IU
-        vSl2xvUCEyFv0+ktBShdrWfb3QwMMqej6djtLuZUBcsroaJE7TE74zRZGWeAFSyGamDH2SHv5fkDBShd
-        rWfbFQN7r99Jx5oAzSuhokTtfsw7a3Cefc+KFeOhkfVe8tIobAoXpav1bLti4ELhcijlru6sxGGJE3cF
-        JtR+VqgUa5Pt3tGvjsOmcFG6Ws+2KwYOTS+ccrdbE/EVsKGZNVSUdHzW0QzTc/4i5VCN5hQY1OYSY4k7
-        YUMza6goCcwGH8SlFS1Simo1p8Co2QYbmllDRQnmmF3MvByq2ZyZcXbChmbWUFGCQ+AUM9fo4V4F9bPm
-        nXu8w1+8AZvCRelqPduunGkCF9gnYUMza6gogdGXfmOJCjL4yVBuT/g5vPCmN//jOdgULkpX69l2yq/U
-        NIGBZQE2NLOGihKcb9eYuaZ9tMM7eOEQvlq5RfkpX1ZPg+Z+wldpZg0VJTD6y28sUVcbalKu5KL8lC+r
-        J/gTX6WZNVSUqHmFGOepY3PqqzSzhooSNNe4ey73MIeb56jjOXcVX6WZNVSUwGjBbyyp22iZiV6ADc2s
-        oaIE89wIM9fUa57D7dcJ2NDMGipKAjPmsrxC6U72Lf0KZejtnW3quSIrUIpqNWen3L/vvdJyP2xoZg0V
-        JQdefGVlaMqaY0VKUa3mouNdnxuesRI2NLOGipLtJ/tvsbJ2DytSiqo1l3ITG+Y2LP1+Tj31cjLOXTD9
-        1l+kFNW4EwdfR9OxVb2jvTSvhIqSxcd6Tbgj7yp1teJHjXqVfoZiZRwXP3aTerbD8kqoKMk/lJ0xb4P5
-        mL9YMfQ0oa42/JQ13PvAj5u0s/at+okcyyuhokQ/3e1Egxg1W1Hkir9oLQhOh78JTpst+R8bsLwSKkr0
-        A1BFfLzLiE3EHzYno0VvgyqNmbWvPf3Wrs17D+4z9hzak4fllVBRkhhL/MuH3Tncibhby3cFWz/dGtuH
-        xl574VVj/0v787C8EipKutGMpAd7zz71SE3f8myaDRrPv/5crqHh4eE8LK+EihLWXCTZV9P3cxtxfu2t
-        ZXO1fLNaz+aq/k58OTRX7L8Zbhxd07GroOz/Zqhac/9nqNgoULFRoGJj4Bn/AFH4D4iAUGm4AAAAAElF
-        TkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IwAALiMBeKU/dgAABP9JREFUaEPdml9oW2UYxk/nhSIyezEv3K5EShEtiLCNdYNusizNSc45yUmb1rqK
+        ttMycExlbqAIlU1lMDf1QtBtiluzrrZJk67VTm+8kHZsFkGcc1NvBTe9UmGicny+0C++O3mWRJo/NQd+
+        pDwn53mfN+ec7zt/anie17BQsVGgYqNAxUaBipLQR6E8nR93GtaMaVgjjxrrjg8Y0axtRED4TMQIp2NG
+        IGsZA8cGV+0+8kxbYMYcCk9G37Mmo+fBL5HJ6HXwe+4zHfsZnFfrt52JPLX7yLMPPIHtgrNBIww/ZzJq
+        2Ar8vf7oDmMzPs2z227IomB5JVSUSLMSza0GfeGMM4/QHpooG2yjmItMWb1o7u7l1FxzeMrqxp64xIL/
+        V9DkRTTXheaa69bc2mODqrn7cMglWcilAt8TaK513btP1rC56bDhJPuM9g8eCzpZ+wcWrFKgue82vv94
+        YAsO+1Atmgujufh4V4+VtX9jgSoNfsBfQzNmQtXO5cCn+lvB8kqoKDFxGOZBY2jOxIDxBwtSLayUex11
+        Oxfr52F5JVSUOBknDwq1WunYZX/xGnHRTsdaYinXcBdheSVUlKgRa5E7IhlnghS9KXbG9QITIW/T6S0F
+        KF2tZ9vdDAwyp6Pp2O0u5lQFyyuhokTtMTvjNFkZZ4AVLIZqYMfZIe/l+QMFKF2tZ9sVA3uv30nHmgDN
+        K6GiRO1+zDtrcJ59z4oV46GR9V7y0ihsChelq/Vsu2LgQuFyKOWu7qzEYYkTdwUm1H5WqBRrk+3e0a+O
+        w6ZwUbpaz7YrBg5NL5xyt1sT8RWwoZk1VJR0fNbRDNNz/iLlUI3mFBjU5hJjiTthQzNrqCgJzAYfxKUV
+        LVKKajWnwKjZBhuaWUNFCeaYXcy8HKrZnJlxdsKGZtZQUYJD4BQz1+jhXgX1s+ade7zDX7wBm8JF6Wo9
+        266caQIX2CdhQzNrqCiB0Zd+Y4kKMvjJUG5P+Dm88KY3/+M52BQuSlfr2XbKr9Q0gYFlATY0s4aKEpxv
+        15i5pn20wzt44RC+WrlF+SlfVk+D5n7CV2lmDRUlMPrLbyxRVxtqUq7kovyUL6sn+BNfpZk1VJSoeYUY
+        56ljc+qrNLOGihI017h7Lvcwh5vnqOM5dxVfpZk1VJTAaMFvLKnbaJmJXoANzayhogTz3Agz19RrnsPt
+        1wnY0MwaKkoCM+ayvELpTvYt/Qpl6O2dbeq5IitQimo1Z6fcv++90nI/bGhmDRUlB158ZWVoyppjRUpR
+        reai412fG56xEjY0s4aKku0n+2+xsnYPK1KKqjWXchMb5jYs/X5OPfVyMs5dMP3WX6QU1bgTB19H07FV
+        vaO9NK+EipLFx3pNuCPvKnW14keNepV+hmJlHBc/dpN6tsPySqgoyT+UnTFvg/mYv1gx9DShrjb8lDXc
+        +8CPm7Sz9q36iRzLK6GiRD/d7USDGDVbUeSKv2gtCE6HvwlOmy35HxuwvBIqSvQDUEV8vMuITcQfNiej
+        RW+DKo2Zta89/dauzXsP7jP2HNqTh+WVUFGSGEv8y4fdOdyJuFvLdwVbP90a24fGXnvhVWP/S/vzsLwS
+        Kkq60YykB3vPPvVITd/ybJoNGs+//lyuoeHh4Twsr4SKEtZcJNlX0/dzG3F+7a1lc7V8s1rP5qr+Tnw5
+        NFfsvxluHF3Tsaug7P9mqFpz/2eo2ChQsVGgYmPgGf8AUfgPiIBQabgAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnLamMoi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -279,12 +277,12 @@
   </data>
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAADqSURBVDhP1ZI9CsJAFIRT+IOltxAtRPtAQAtzgED+6txAtLLwJlaClVioteIlErESS2stRL+V
-        V7iw/jQiDgzLvJ15bzcb66twHCcXhmEviqIMHmEKB57nlcTyHCocx/GawNz3/QaNymqlNqa2UftiNQNT
-        H05FaqDJDHZFmkF4FwRBRaQG9qo02Io0A9OZuxZEanBdt8iVTiLNUBM4QU2kBvbqDMhEmsGEIcaJSA2E
-        F2+/AYYOxiu8v0KSJHlqTfQSrl6+AkYb04HVefgPLjBVk1+GCbQx7tU0KX0Ogq3fhBU4+oiwLfJvYFk3
-        3Y9jF5EnizMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAOpJREFUOE/V
+        kj0KwkAUhFP4g6W3EC1E+0BAC3OAQP7q3EC0svAmVoKVWKi14iUSsRJLay1Ev5VXuLD+NCIODMu8nXlv
+        Nxvrq3AcJxeGYS+KogweYQoHnueVxPIcKhzH8ZrA3Pf9Bo3KaqU2prZR+2I1A1MfTkVqoMkMdkWaQXgX
+        BEFFpAb2qjTYijQD05m7FkRqcF23yJVOIs1QEzhBTaQG9uoMyESawYQhxolIDYQXb78Bhg7GK7y/QpIk
+        eWpN9BKuXr4CRhvTgdV5+A8uMFWTX4YJtDHu1TQpfQ6Crd+EFTj6iLAt8m9gWTfdj2MXkSeLMwAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
 </root>
