--- a/UI/code/Login_RauMa/DashBoar/QL_SanPham.resx
+++ b/UI/code/Login_RauMa/DashBoar/QL_SanPham.resx
@@ -117,26 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="masp_admin.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="admin_masp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="tenmon_admin.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="admin_loai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="gia_admin.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="admin_mota.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="loai_admin.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="admin_trangthai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="trangthai_admin.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="admin_gia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="mota_admin.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="admin_tensp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_them.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
         IwAALiMBeKU/dgAABP9JREFUaEPdml9oW2UYxk/nhSIyezEv3K5EShEtiLCNdYNusizNSc45yUmb1rqK
@@ -163,7 +163,7 @@
         NFfsvxluHF3Tsaug7P9mqFpz/2eo2ChQsVGgYmPgGf8AUfgPiIBQabgAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btn_xoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
         IwAALiMBeKU/dgAAAz9JREFUaEPt2MlPE3EUB/BeNNGD8aR3z2o8epGTpp48GBQUubiwFSG4sbgjBBeI
@@ -181,68 +181,6 @@
         Ot/aGVnMdQ4gtl+CDSVc/gjZib7rB6IB2/ENurti+iF1+VIWz2O/yaMLaA9i+yXYUMLlxeW8kQ0uX6RU
         P9RqcfpipU7fzEbE9kuwoURiOYvbF93c/mQ2Bwf6mjzgP/qGi+XjUptosTVZbj1gQ6NgQ6NgQ6NgQ6Ng
         Q2MAy0/c+ChG8ZjGYAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnSua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
-        IwAALiMBeKU/dgAABKpJREFUaEPdmU1sVFUUx+98dF51ZdQujAZjRBMXJsYikC5qKx8RjUsgsVWU1haq
-        iUYRSQyCAYJQkRKs00oUUTfGhR8VQT6mlIptdFPoomOiG3ciUdopUGnJ8X/mzWXue3PeUF/fzLSz+KXT
-        c87MPb+c9+be1yoiKlvEYLkgBssFMVguiEEnXFMEJlSUDqtXaZtK0IiqpTHEbsQ1gDd7IQadcE2BYbEe
-        9QLtUaPUjVCnGqL31QKg8DoL/87sB/tACuADvBCDTrimgFxJi7VQu0qlxbqucw4sQExdpytDHLDsrJbz
-        FtOcRTwrGLhcKpxlNKToPN6Tj788yK2N0PeqlXapyx5iNt2YoBYMXO74TTYJ0FOpaDfe8x7Y60GHB866
-        MGjF/TORV0zTrYbTgoHL9UGI6Qc/WPYNzR+uF3KjLyE32ZowWAf+BbKMBAt2qWowa+VC4P+LZRkC1bNV
-        bj24CqTGp8tZrP/wbJMLQswmjgl2qhrIRcSeM4hBB8HItSAXjJimU/VC7hax5wxi0MHM5ZrBJeTkJv1x
-        gT5Qr0DuZrHnDGLQwczk1oNJxKUG/XIBNECupPdcocQagSqlHIsFe491qb+x7jP4aa9TIrnCiZnrlkCO
-        xfxu0F78g/WeTa9ZQjk+eUwAqUG/XHSIlUiOxa4AqUG/jGKdNQ6xEsgVT8xctwhyreAykBr0yyiQxZgi
-        ybHYOJAa9EsKrAG5UpoiyPFZsRBizwG7eUmMKZjcUauC9qk2fDg3IjXol+zESiZ3wrqXDoaSmJ7UoF94
-        X2wC2cYZSYzR+UDkjvLEwLHKKJ22XqRjsXE6FE7SfqTlZqdPHJd2XBBjJDFG5wOR+zNs80fkVjpV+Q39
-        aBEdjyXp4AwF43gM4g3aFDKRxBidD0QuXZNmHi7Li5geUb91DRNM0ifhEV+C9sTsk4cpZOKW0uh8IHLD
-        EZuh6BI6BbE+YAtOZQTtCU7nT3RMHF8e0lnRjSlkovOByCVwSZ6MWLgUt6bFNE5Be4I3FuSJ2ad7d7Nu
-        zBoTnQ9CbvDLu9TwV3fcRv0VvQ65rOAkBEemcYnyxJxiZrNu3HUanQ9C7uvP7lO9X9x9D52JTuTIaViQ
-        v2S8BcfQWGNOo2azbqRaRueDkPu8o7riQPvilz9uX0z0UwjTiuUT5Am6v0W9xRhTyESqZXQ+CLmdm5fe
-        vvmNFQPLnm6mQ3sWEg3kFbyaEdQT5OexhpwGTUwhE6mW0fkg5Dp31NzZ/NLKydpV62hFYxMEH8kvaO+D
-        Y9jof8ZJZi0aCuU0aGIKmUi1jM4HIde1Y1H18oYm4snVrW6lxxvXyhPsBQnrEl4foUFrA30beYA6VERs
-        0MQUMpFqGZ0PQm731rp361e3pOWWAp4gv/6ofRHRmcgUBBN0MraFktHH6HxkPo5qVZCL0XfYG/lfV1KD
-        JqaQiVTL6HwQcps2PvlrHeTqMbVlDc3U1LZyatPGJ37Z9Xb9hr5P759PA+EqOhGz6HfIjGNPPIJz6CAe
-        jXrmgNxrrz+V2vLm8nMfvlOzrXv7ow8937Zq3s63llTt3V5b0XPgQYiE8LQQU/QbZMbmmNxcRgyWC2Kw
-        XBCD5QGp/wAz8XKN5YCcEwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btn_exit.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
-        IwAALiMBeKU/dgAABu5JREFUaEPdmltsG0UUhidF4iYorVRQKVJVekvTNjSJvV7b6zj22k7cSC1q1CRc
-        ygtIXASIi2gpAtT7vYUiIV5APBSKqMQDLyDxjgoCIV4oUKDiEZpbY8/a2bVdD+esvcmsfRI7auOWjPRp
-        5X/PnPmPZ3d2VjYTQsxbSHG+QIrzBVKcL5Cii82rJVayXHI9G9MirKh0sHS3wtJRlaXCGsvGfMzQQszc
-        sWJJ4fnFrUZQe8aI+T4GfjBiyqgR95lAxj7GfCNGTAXd9zHXtKcLLyzeaD6+YokR6mSZWICNR9pZKuZl
-        RsLPripeJiJtTPSuhfFXuf1QfiVI0YWcbObilmWi6mOGrn5nRP0CjNcPxkfV81nd/wgUd//NVNyiVDjY
-        n0kov5HGZ0km5r+QinRsT8WURTeuOC8Ul1BaeEw5a+i00WuBx9UzPOFvLnobXNxoKMIKAU8PFHeJMnbd
-        SKh/5v2+hIjOWXErJR5k+WQLG4mGB42EYpCGrjPpuMrziY4BsXlNhReA8itBijJXYaZKtLBCspnlezb0
-        wqJhUUbmirSumjBuspBcBx7QRwnKrwwpyhiJzjIhBoM0G7r/ImVgruG6/0I6HliT7gYfZSi/MqQok0lo
-        ZYJ3weLxBTVwo4BF5nPeHbwTYAjlV4YUZbLxINKUiQeepAYkiXqFEfEII67S5x3wPMZhPHWeAFbQJ4xE
-        sAkg/cqQosxEl8rMLv8DsMv4ixrMBZrtbBM82FoyHW6bvkDU8TzEcQ3ioV/NLwPgMd/FiWhg2UTET/qV
-        IUUZKxJckI3Ct0UM5AKM8eBG26z53nHgmG2aaw9Vm8ZY1OG8BXEYbxeJ/esoEHYyO6ykvoDyK0OKLiLR
-        RbAP/J4axAXMAo96hPXRB9Ct1MyTBwVXWwQPSQViYfAZdevkoXKkENaH78PlWZ7tytwVcN17XgwO3gPd
-        aM9lSFHGimpt1AAu4J7BmbBgBlwtZwnz+H7BPatLM9UdKM2mZ42ti1yuHFhqzmzXvAd1ReS3dLdCF9Kz
-        AynKpHXvi+QAMuVFwTpxQBTTKeg21YoGF+bRPTBT6wXvWGXPmHl0ryhmjHJEqWE/88T+UmGYjxpHpqv9
-        OehGenYgRRnYN35GJpfBS66rXRhofO/ronhlDLpKDWbQOgIFetfaR/wsN4w39+yy+xtdHXXdd+DrE+hK
-        enYgRRlYnX4mk1eChnDFgwKoAoupcZH/5itRHB8vK6U2WRj0m3F1rSATU36C7qRnB1KUgUTDlYmnxSkQ
-        76k9O4WonMHKZhe2046v91EwhXIZMpCeHUhRBhIVqhPPgF3gptIMvvWqKP59CdJUN9TxvD1jGD+rwmzy
-        kIb07ECKMkTS2iRgVfQ2C962UuS//hLSVDfU8TzGYTyZpwbQSM8OpCgDSWY9c/Zyr66D1e+gKP77D6Sp
-        bqjjefs5iMv/DZq5kYqk0+MU5lsnrFOHhchmIcUMDc5bpw7Z8eROZkaUIchAenYgRRlclejkFUwWBjuP
-        d45UFVYcHhK5c2fso6tlMhB/uFxg/TOYiSs/Qm/SswMpymR136dUchdoCDfMuEt5FwoDw3LDx4D55iuC
-        ty63j/jZ1bBAmGm7uPpXzTPQk/TsQIoyqWCovh0KYJ0+VrWlKmYzwty3G7Zca0v3Fz4m9r0BesUlC/3M
-        00cnc5HjyPRq175DsZ5a2mroNb5Je2+5SZjH9kEXqaXT8ECHwvCSC8Fyn/DbR/yMBQqeLgeW2gT0tzfZ
-        NfaW8NJ6Nb986QboQnp2IEUXh9lCIxI4Tw3iItwuODyv7MsSmwWb5rd32TPF5UsN702Is2cQdibOVgz7
-        2XGQpyp3BfDC+i1YXwjdaM9lSFFmor/5FkP3D1KDuEDTeM/AFgpfdUxcBfEypO4hu0C4R3EvCnEYb78y
-        1bmg8O7AQLa95drf54zOEKyY6r1ZXfmdGsgFGsMZdC4t3ExPZxZ1PI+XNMbjjNVRGKySvxjJwBK+tYv0
-        K0OKMld6VKRpvMe3nRqMxHltqWUWz2NcjXvMAQoTY2F/32g42DQa1ki/MqQoM9Kr2owm1dvhwXmOGrRh
-        xH1nh0PB24aCGkMovzKkKDOc9NqM9HgZj7Q3G1HPH+TAcwnMGA+HfuWdnWuGfBF22Ru1ofzKkKJMvm/r
-        JIVtD7P8ls061z31vwZdB3hYG84/e1+k8NrdLPfyQpZ7qQTlV4YUXQwMTjH4KBTZx4Yjwb6G/lbQ5dsm
-        dt/KxBHwe0iC8itBii76+6cYGGA5KG5UCzX2V56Qh4lddzBxAPzulaD8SpCiC6K4MbiZG/r7nNbo4hr5
-        y+oNLG7ufxO/CYqb/t8McWUYnlGlQvAY9w3N6t8Mc1bc/xhSnC+Q4nyBFOcHgv0HEIByPg6eO/sAAAAA
-        SUVORK5CYII=
 </value>
   </data>
   <data name="btn_sua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -307,42 +245,6 @@
         SUVORK5CYII=
 </value>
   </data>
-  <data name="btnThoat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
-        IwAALiMBeKU/dgAABu5JREFUaEPdmltsG0UUhidF4iYorVRQKVJVekvTNjSJvV7b6zj22k7cSC1q1CRc
-        ygtIXASIi2gpAtT7vYUiIV5APBSKqMQDLyDxjgoCIV4oUKDiEZpbY8/a2bVdD+esvcmsfRI7auOWjPRp
-        5X/PnPmPZ3d2VjYTQsxbSHG+QIrzBVKcL5Cii82rJVayXHI9G9MirKh0sHS3wtJRlaXCGsvGfMzQQszc
-        sWJJ4fnFrUZQe8aI+T4GfjBiyqgR95lAxj7GfCNGTAXd9zHXtKcLLyzeaD6+YokR6mSZWICNR9pZKuZl
-        RsLPripeJiJtTPSuhfFXuf1QfiVI0YWcbObilmWi6mOGrn5nRP0CjNcPxkfV81nd/wgUd//NVNyiVDjY
-        n0kov5HGZ0km5r+QinRsT8WURTeuOC8Ul1BaeEw5a+i00WuBx9UzPOFvLnobXNxoKMIKAU8PFHeJMnbd
-        SKh/5v2+hIjOWXErJR5k+WQLG4mGB42EYpCGrjPpuMrziY4BsXlNhReA8itBijJXYaZKtLBCspnlezb0
-        wqJhUUbmirSumjBuspBcBx7QRwnKrwwpyhiJzjIhBoM0G7r/ImVgruG6/0I6HliT7gYfZSi/MqQok0lo
-        ZYJ3weLxBTVwo4BF5nPeHbwTYAjlV4YUZbLxINKUiQeepAYkiXqFEfEII67S5x3wPMZhPHWeAFbQJ4xE
-        sAkg/cqQosxEl8rMLv8DsMv4ixrMBZrtbBM82FoyHW6bvkDU8TzEcQ3ioV/NLwPgMd/FiWhg2UTET/qV
-        IUUZKxJckI3Ct0UM5AKM8eBG26z53nHgmG2aaw9Vm8ZY1OG8BXEYbxeJ/esoEHYyO6ykvoDyK0OKLiLR
-        RbAP/J4axAXMAo96hPXRB9Ct1MyTBwVXWwQPSQViYfAZdevkoXKkENaH78PlWZ7tytwVcN17XgwO3gPd
-        aM9lSFHGimpt1AAu4J7BmbBgBlwtZwnz+H7BPatLM9UdKM2mZ42ti1yuHFhqzmzXvAd1ReS3dLdCF9Kz
-        AynKpHXvi+QAMuVFwTpxQBTTKeg21YoGF+bRPTBT6wXvWGXPmHl0ryhmjHJEqWE/88T+UmGYjxpHpqv9
-        OehGenYgRRnYN35GJpfBS66rXRhofO/ronhlDLpKDWbQOgIFetfaR/wsN4w39+yy+xtdHXXdd+DrE+hK
-        enYgRRlYnX4mk1eChnDFgwKoAoupcZH/5itRHB8vK6U2WRj0m3F1rSATU36C7qRnB1KUgUTDlYmnxSkQ
-        76k9O4WonMHKZhe2046v91EwhXIZMpCeHUhRBhIVqhPPgF3gptIMvvWqKP59CdJUN9TxvD1jGD+rwmzy
-        kIb07ECKMkTS2iRgVfQ2C962UuS//hLSVDfU8TzGYTyZpwbQSM8OpCgDSWY9c/Zyr66D1e+gKP77D6Sp
-        bqjjefs5iMv/DZq5kYqk0+MU5lsnrFOHhchmIcUMDc5bpw7Z8eROZkaUIchAenYgRRlclejkFUwWBjuP
-        d45UFVYcHhK5c2fso6tlMhB/uFxg/TOYiSs/Qm/SswMpymR136dUchdoCDfMuEt5FwoDw3LDx4D55iuC
-        ty63j/jZ1bBAmGm7uPpXzTPQk/TsQIoyqWCovh0KYJ0+VrWlKmYzwty3G7Zca0v3Fz4m9r0BesUlC/3M
-        00cnc5HjyPRq175DsZ5a2mroNb5Je2+5SZjH9kEXqaXT8ECHwvCSC8Fyn/DbR/yMBQqeLgeW2gT0tzfZ
-        NfaW8NJ6Nb986QboQnp2IEUXh9lCIxI4Tw3iItwuODyv7MsSmwWb5rd32TPF5UsN702Is2cQdibOVgz7
-        2XGQpyp3BfDC+i1YXwjdaM9lSFFmor/5FkP3D1KDuEDTeM/AFgpfdUxcBfEypO4hu0C4R3EvCnEYb78y
-        1bmg8O7AQLa95drf54zOEKyY6r1ZXfmdGsgFGsMZdC4t3ExPZxZ1PI+XNMbjjNVRGKySvxjJwBK+tYv0
-        K0OKMld6VKRpvMe3nRqMxHltqWUWz2NcjXvMAQoTY2F/32g42DQa1ki/MqQoM9Kr2owm1dvhwXmOGrRh
-        xH1nh0PB24aCGkMovzKkKDOc9NqM9HgZj7Q3G1HPH+TAcwnMGA+HfuWdnWuGfBF22Ru1ofzKkKJMvm/r
-        JIVtD7P8ls061z31vwZdB3hYG84/e1+k8NrdLPfyQpZ7qQTlV4YUXQwMTjH4KBTZx4Yjwb6G/lbQ5dsm
-        dt/KxBHwe0iC8itBii76+6cYGGA5KG5UCzX2V56Qh4lddzBxAPzulaD8SpCiC6K4MbiZG/r7nNbo4hr5
-        y+oNLG7ufxO/CYqb/t8McWUYnlGlQvAY9w3N6t8Mc1bc/xhSnC+Q4nyBFOcHgv0HEIByPg6eO/sAAAAA
-        SUVORK5CYII=
-</value>
-  </data>
   <metadata name="xem_masp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -361,22 +263,22 @@
   <metadata name="xem_mota.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="admin_masp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="xem_masp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="admin_loai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="xem_tensp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="admin_mota.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="xem_gia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="admin_trangthai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="xem_loai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="admin_gia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="xem_trangthai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="admin_tensp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="xem_mota.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
 </root>
